# huggingface-datasets_CGL-Dataset-v2

./: CGL-Dataset-v2.py  README.md  pyproject.toml
.github/workflows/: ci.yaml  push_to_hub.yaml
tests/: CGL-Dataset-v2_test.py
