[tool.poetry]
name = "huggingface-datasets-cgl-dataset-v2"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
datasets = { extras = ["vision"], version = ">=1.0.0" }
huggingface-datasets-cocoapi-tools = { extras = [
    "cocoapi",
], version = ">=0.4.0" }
torch = ">=1.0.0"
ralf-preprocessing-tools = { git = "https://github.com/creative-graphic-design/ralf-preprocessing-tools.git", extras = [
    "lama",
] }

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

types-pillow = "^10.1.0.20240106"
types-pycocotools = "^2.0.0.20240106"
types-tqdm = "^4.66.0.20240106"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
